samples/_failures_safe/1761695334_512720_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c8100da.c: In function ‘main’:
./samples/SAFE/__tmp_5c8100da.c:152:85: error: expected ‘)’ at end of input
  152 |     if (decompressed.size == input_len && memcmp(decompressed.data, input, input_len
      |                                                 ~                                   ^
      |                                                                                     )
./samples/SAFE/__tmp_5c8100da.c:152:5: error: expected declaration or statement at end of input
  152 |     if (decompressed.size == input_len && memcmp(decompressed.data, input, input_len
      |     ^~
